# VE482-public

./: .gitignore  LICENSE  README.md
Homework/h1/: README.md  WuQinhang h1.md  ex5.sh
Homework/h2/: WuQinhang h2.md
Homework/h3/: README.md  WuQinhang h3.md  ex2.c  list.h  rand_char.txt
Homework/h3/sample io/: dec_char.txt  inc_char.txt  inc_double.txt  inc_int.txt  rand_double.txt
Homework/h4/: WuQinhang h4.md  cthread.c  ex3.out  ex3.sh  ex3_driver.sh  ex3_fix.sh
Homework/h5/: WuQinhang h5.md  banker.cpp
Homework/h6/: WuQinhang h6.md  thrashing.c
Homework/h6/WuQinhang h6.assets/: fetch.php
Homework/h7/: WuQinhang h7.md  getnchpid.c
Homework/h8/: WuQinhang h8.md
Lab/Lab 1/: PS3.sh  WuQinhang Lab1 Report.md  game.sh
Lab/Lab 10/: Lab10 Report.md
Lab/Lab 11/: Lab11 Report.md  README.md
Lab/Lab 2/: README.md  WuQinhang Lab2 Report.md
Lab/Lab 3/: WuQinhang Lab3 Report.md  air.sh  ip.sh
Lab/Lab 4/: WuQinhang Lab4 Report.md
Lab/Lab 5/: WuQinhang Lab5 Report.md  lab5_dlist.c  lab5_dlist.h
Lab/Lab 5/code/: Makefile  driver_cmd.c  driver_menu.c  list.c  list.h  sort.c  sort.h  ui.c  ui.h
Lab/Lab 6/: Makefile  WuQinhang Lab6 Report.md
Lab/Lab 6/cmplx-sort/: Makefile  README.md
Lab/Lab 6/zathura-txt/: .gitignore  AUTHORS  LICENSE  meson.build
Lab/Lab 6/zathura-txt/zathura-txt/: plugin.c  plugin.h
Lab/Lab 7/: Lab7 Report.md
Lab/Lab 7/dadfs/: .gitignore  Makefile  README.md  base.c  base.h  mkfs-dadfs.c  sblock.h  workflow.sh
Lab/Lab 8/: .gitignore  Lab8 Report.md  workflow.sh
Lab/Lab 9/: .gitignore  Lab9 Report.md  Lab9_TimShi.docx
(+20 files in other folders)
